# vector

./: Cargo.toml  Makefile
.github/workflows/: release.yml
lib/k8s-runtime/: Cargo.toml
lib/k8s-runtime/src/: lib.rs  reflector.rs  test_util.rs
lib/k8s-runtime/src/client/: multi_response_decoder.rs  stream.rs  watcher.rs
lib/k8s-runtime/src/state/: delayed_delete.rs
src/: lib.rs
src/event/: metric.rs  mod.rs
src/kubernetes/: instrumenting_state.rs
src/sinks/: aws_cloudwatch_metrics.rs  prometheus.rs  statsd.rs
src/sinks/datadog/: metrics.rs
src/sinks/influxdb/: metrics.rs
src/sinks/util/buffer/: metrics.rs
tests/support/: mod.rs
