[package]
name = "k8s-runtime"
version = "0.1.0"
authors = ["Vector Contributors <vector@timber.io>"]
edition = "2018"

[dependencies]
async-stream = "0.2"
async-trait = "0.1"
futures = "0.3"
http = "0.2"
k8s-openapi = "0.8"
serde = "1"
snafu = "0.6"
tokio = { version = "0.2", features = ["time", "full"] }
evmap = { version = "10", optional = true }
bytes = "0.5"
http-body = "0.3"
hyper = "0.13"
tracing = "0.1"

[dev-dependencies]
k8s-openapi = { version = "0.8", features = ["v1_15"] }
rand = "0.7"
tokio = { version = "0.2", features = ["test-util"] }

[features]
# Mocks
mocks  = ["mock-watcher", "mock-state"]
mock-watcher = []
mock-state = []
# Implementations
impls = ["evmap-state"]
evmap-state = ["evmap"]

default = ["impls"]
